--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1094,25 +1094,25 @@ audio {
 	display: none;
 }
 #b1,#b11 {
-	background-image: url('b1.png');
+	background-image: url('assets/img/b1.png');
 }
 #b2,#b22 {
-	background-image: url('b2.png');
+	background-image: url('assets/img/b2.png');
 }
 #b3,#b33 {
-	background-image: url('b3.png');
+	background-image: url('assets/img/b3.png');
 }
 #b4,#b44{
-	background-image: url('b4.png');
+	background-image: url('assets/img/b4.png');
 }
 #b5,#b55{
-	background-image: url('b5.png');
+	background-image: url('assets/img/b5.png');
 }
 #b6,#b66{
-	background-image: url('b6.png');
+	background-image: url('assets/img/b6.png');
 }
 #b7,#b77{
-	background-image: url('b7.png');
+	background-image: url('assets/img/b7.png');
 }
 .balloons-rotate-behaviour-one {
 	-webkit-animation: balloons_rotate_one linear 10s infinite;
